[package]
name = "xpr"
version = "0.1.0"
edition = "2021"
authors = ["joergbrech"]
license = "MIT/Apache-2.0"
repository = "https://github.com/joergbrech/xpr"
documentation = "https://docs.rs/xpr"
readme = "README.md"
description = "A general purpose generic expression template library."
keywords = ["expression", "expression-templates"]
categories = ["rust-patterns", "science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
